--- a/WADWolfram/src/main/resources/templates/new_template.html
+++ b/WADWolfram/src/main/resources/templates/new_template.html
@@ -51,8 +51,8 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="/register.html">Únete</a></li>
-                                        <li><a href="/login.html">Inicia sesión</a></li>
+                                        <li><a href="/register">Únete</a></li>
+                                        <li><a href="/login">Inicia sesión</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -68,11 +68,11 @@
                             <br>
                             <br>
                             <br>
-                            <!--               <ul class="breadcrumb">
-                           <li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
-                                <li><a href="projects.html">Proyectos</a></li>
-                                <li class="active">Proyecto</li>
-                            </ul>-->
+                            <ul class="breadcrumb">
+                           <li><a href="/"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+                                <li><a href="/blog">Noticias</a></li>
+                                <li class="active">Noticia</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                         </form>
 
                     </div>
-                    <div class="col-lg-4">
+                    <!--<div class="col-lg-4">
                         <aside class="right-sidebar">
                             <div class="widget">
 
@@ -144,7 +144,7 @@
                             <div class="widget">
                             </div>
                         </aside>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </section>
@@ -171,7 +171,7 @@
                             <ul class="link-list">
                                 <li><a href="#">Términos y condiciones</a></li>
                                 <li><a href="#">Política de privacidad</a></li>
-                                <li><a href="contact.html">Contáctanos</a></li>
+                                <li><a href="/contact">Contáctanos</a></li>
                             </ul>
                         </div>
 
