--- a/WADWolfram/src/main/resources/templates/projects_template.html
+++ b/WADWolfram/src/main/resources/templates/projects_template.html
@@ -57,20 +57,20 @@
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="/img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
+                        <a class="navbar-brand" href="/"><img src="/img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-                            <li><a href="index.html">Inicio</a></li>
-                            <li class="active"><a href="projects.html">Proyectos</a></li>
-                            <li><a href="blog.html">Noticias</a></li>
-                            <li><a href="contact.html">Contacto</a></li>
-                            <li><a href="about.html">Sobre los desarrolladores</a></li>
+                            <li><a href="/">Inicio</a></li>
+                            <li class="active"><a href="/projects">Proyectos</a></li>
+                            <li><a href="/blog">Noticias</a></li>
+                            <li><a href="/contact">Contacto</a></li>
+                            <li><a href="/about">Sobre los desarrolladores</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="register.html">Únete</a></li>
-                                    <li><a href="login.html">Inicia sesión</a></li>
+                                    <li><a href="/register">Únete</a></li>
+                                    <li><a href="/login">Inicia sesión</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -85,11 +85,10 @@
                             <br>
                             <br>
                             <br>
-                            <!--               <ul class="breadcrumb">
-                           <li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
-                                <li><a href="projects.html">Proyectos</a></li>
-                                <li class="active">Proyecto</li>
-                            </ul>-->
+                            <ul class="breadcrumb">
+                           <li><a href="/"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+                           <li class="active">Proyectos</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -180,7 +179,7 @@
                             <ul class="link-list">
                                 <li><a href="#">Términos y condiciones</a></li>
                                 <li><a href="#">Política de privacidad</a></li>
-                                <li><a href="contact.html">Contáctanos</a></li>
+                                <li><a href="/contact">Contáctanos</a></li>
                             </ul>
                         </div>
 
