--- a/WADWolfram/src/main/resources/templates/users.html
+++ b/WADWolfram/src/main/resources/templates/users.html
@@ -59,7 +59,7 @@
                         <ul class="nav navbar-nav">
                             <li><a href="index.html">Inicio</a></li>
                             <li><a href="proyects.html">Proyectos </a></li>
-                            <li><a href="blog.html">Noticias </a></li>
+                            <li><a href="blog_template.html">Noticias </a></li>
                             <li><a href="contact.html">Contacto </a></li>
                             <li><a href="about.html">Sobre sus desarrolladores </a></li>
                             <li class="dropdown active">
