--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/profile.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/profile.html
@@ -105,7 +105,7 @@
                                         antigua</label>
                                     <div class="col-sm-10">
                                         <input type="password" class="form-control" id="inputEmail3"
-                                               placeholder="{{oldPassword}}" name="mpassword" required>
+                                               placeholder="Contraseña antigua" name="mpassword" required>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -113,7 +113,7 @@
                                         nueva</label>
                                     <div class="col-sm-10">
                                         <input type="password" class="form-control" id="inputPassword3"
-                                               placeholder="{{newPassword}}" name="mnew_password" required>
+                                               placeholder="Contraseña nueva" name="mnew_password" >
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -121,7 +121,7 @@
                                         contraseña</label>
                                     <div class="col-sm-10">
                                         <input type="password" class="form-control" id="inputPassword3"
-                                               placeholder="{{newPassword}}" name="mrepeat_password" required>
+                                               placeholder="Repetir contraseña nueva" name="mrepeat_password" >
                                     </div>
                                 </div>
 
