--- a/WADWolfram/src/main/resources/templates/oneProject.html
+++ b/WADWolfram/src/main/resources/templates/oneProject.html
@@ -60,9 +60,9 @@
                         <ul class="nav navbar-nav">
                             <li><a href="/">Inicio</a></li>
                             <li  class="active"><a href="/projects">Proyectos </a></li>
-                            <li><a href="/blog_template">Noticias </a></li>
+                            <li><a href="/blog">Noticias </a></li>
                             <li><a href="/contact">Contacto </a></li>
-                            <li><a href="/about">Sobre nosotros </a></li>
+                            <li><a href="/about">Sobre sus desarrolladores </a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
