--- a/WADWolfram/src/main/resources/templates/pay.html
+++ b/WADWolfram/src/main/resources/templates/pay.html
@@ -39,21 +39,21 @@
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-                            <li><a href="/">Inicio</a></li>
-                            <li class="active"><a href="/projects">Proyectos</a></li>
+                            <li><a>Inicio</a></li>
+                            <li class="active"><a>Proyectos</a></li>
 
-                            <li><a href="/blog">Noticias</a></li>
+                            <li><a>Noticias</a></li>
                             <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
-                            <li><a href="/contact">Contacto</a></li>
-                            <li><a href="/about">Sobre sus desarrolladores</a></li>
+                            <li><a>Contacto</a></li>
+                            <li><a>Sobre sus desarrolladores</a></li>
 
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
-                                <ul class="dropdown-menu">
+                                <a class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
+                               <!--  <ul class="dropdown-menu">
                                     <li><a href="/register">Únete</a></li>
                                     <li><a href="/login">Inicia sesión/ Mi cuenta</a></li>
-                                </ul>
+                                </ul>  -->
                             </li>
                         </ul>
                     </div>
@@ -62,13 +62,18 @@
             <section id="inner-headline">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-md-12">
                             <ul class="breadcrumb">
-                                <li><a href="/"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
-                                <li href="/porjects">Proyectos</li>
-                                <li href="/porject">Proyecto</li>
+                                <li><a><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+                                <li >Proyectos</li>
+                                <li>Proyecto</li>
                                 <li>Donación</li>
                             </ul>
+                            
+                            <ul class="breadcrumb" style="float:right;">
+                            	<li><a href="/projects">Salir</a></li>
+                            </ul>
+                           
                         </div>
                     </div>
                 </div>
@@ -83,6 +88,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
+                    <img src="/pegar.jpg">
                         <form method="post" action="/pay/projects?projectId={{projectId}}">
                             <div id="data">
                                 {{#User}}
@@ -130,18 +136,41 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="csv">Número de seguridad</label>
-                                    <input maxlength="3" type="number" class="form-control" id="csv" placeholder="CSV" required>
+                                    <input maxlength="3" type="text" class="form-control" id="csv" placeholder="CSV" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="quantity">Donación</label>
-                                    <input type="number" class="form-control" id="quantity" placeholder="Cantidad: 0,00€" name="money" required>
+                                    <input type="number" class="form-control" id="quantity" placeholder="Cantidad: 0.00€" name="money" required>
                                 </div>
 
-                                <button type="submit" class="btn btn-primary btn-lg">Realizar Pago</button>
-                            </div>
+                                <button type="submit" class="btn btn-primary btn-lg"><a href="#" data-toggle="modal" data-target="#t_and_c_m">Realizar Pago</a></button>
+                            </div>                            
                         </form>
                     </div>
                 </div>
+                 <!-- Modal -->
+                <div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                <h4 class="modal-title" id="myModalLabel">Correcto</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>La operación se ha realizado correctamente. Muchas gracias por contribuir. Puede ver su donación en sus movimientos </p>
+                                
+                                
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary"><a href="/login">Entendido</a></button>
+                            </div>
+                        </div>
+                        <!-- /.modal-content -->
+                         </form>
+                    </div>
+                    <!-- /.modal-dialog -->
+                </div>
+                <!-- /.modal -->
             </div>
         </section>
 
