--- a/WADWolfram/src/main/resources/templates/login.html
+++ b/WADWolfram/src/main/resources/templates/login.html
@@ -112,11 +112,37 @@
                             <div class="row">
                                 <div class="col-xs-4 col-sm-3 col-md-3">
                                     <span class="button-checkbox">
-                                        <button type="button" class="btn" data-color="info" tabindex="7">Se me ha olvidado la contraseña</button>
+                                        <button type="button" class="btn" data-color="info" tabindex="7"><p href="#" data-toggle="modal" data-target="#t_and_c_m">Se me ha olvidado la contraseña</p></button>
                                         <input type="checkbox" name="t_and_c" id="t_and_c" class="hidden" value="1">
 					               </span>
                                 </div>
                             </div>
+
+ <!-- Modal -->
+                <div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                <h4 class="modal-title" id="myModalLabel">¡Atención</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>Si usted está registrado, se le enviará la contraseña al correo elctrónico que ha especificado </p>
+                                
+                                
+                            </div>
+                            <div class="modal-footer">
+                         		<form action="qai.karen@gmail.com" method="post">
+                                <button type="button" class="btn btn-primary"><a href="/error">Entendido</a></button>
+                                </form>
+                            </div>
+                        </div>
+                        <!-- /.modal-content -->
+                         </form>
+                    </div>
+                    <!-- /.modal-dialog -->
+                </div>
+                <!-- /.modal -->
 
                             <hr class="colorgraph">
                             <div class="row">
