--- a/WADWolfram/src/main/resources/templates/pay.html
+++ b/WADWolfram/src/main/resources/templates/pay.html
@@ -88,7 +88,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                    <img src="/pegar.jpg">
+                    <img src="/pagar.jpg">
                         <form method="post" action="/pay/projects?projectId={{projectId}}">
                             <div id="data">
                                 {{#User}}
@@ -140,7 +140,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="quantity">Donación</label>
-                                    <input type="number" class="form-control" id="quantity" placeholder="Cantidad: 0.00€" name="money" required>
+                                    <input type="number" class="form-control" id="quantity" placeholder="Nos falta: {{RestBudget}}€" name="money" required>
                                 </div>
 
                                 <button type="submit" class="btn btn-primary btn-lg"><a href="#" data-toggle="modal" data-target="#t_and_c_m">Realizar Pago</a></button>
