--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
@@ -238,7 +238,7 @@
 									<td data-brackets-id='198'><button class="btn btn-primary">
 														<i class="glyphicon glyphicon-pencil"></i> Editar
 													</button>
-													<button class="btn btn-danger">
+													<button class="btn btn-danger" href="/borrarProyecto?id={{id}}">
 														<i class="glyphicon glyphicon-remove"></i> Borrar
 													</button></td>
 
