--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/profile.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/profile.html
@@ -89,7 +89,7 @@
                                 <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Nombre</label>
                                     <div class="col-sm-10">
-                                        <input class="form-control" id="inputEmail3" placeholder="{{name}}" name="mname" readonly/> 
+                                        <p class="form-control" id="inputEmail3">{{name}}</p> 
                                     </div>
                                 </div>
                                 <div class="form-group">
