--- a/WADWolfram/src/main/resources/templates/new_template.html
+++ b/WADWolfram/src/main/resources/templates/new_template.html
@@ -133,14 +133,20 @@
                             <div class="clear"></div>
                             <div class="marginbot30"></div>
                             <h4>Deja tu comentario</h4>
-
+                            {{#logeado}}
+                            <h5 style="color: red"><strong> ¡Debes iniciar sesión para poder comentar! </strong></h5>
+                            <br>
+                            <br>
+                            <a href="/login">Inicia sesión</a>
+                            {{/logeado}}
+                            {{#logeado2}}
                             <form role="form" action="/comment/upload/{{id}}" method="post">
                                 <div class="form-group">
                                     <textarea class="form-control" rows="8" placeholder="Comenta aquí" name="comentarios"></textarea>
                                 </div>
                                 <button type="submit" class="btn btn-theme btn-md">Comentar</button>
                             </form>
-
+                            {{/logeado2}}
                         </div>
                         <div class="col-lg-4">
                             <aside class="right-sidebar">
